--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 					My name is Fan, and I'm a researcher in bioinformatics.
 					I created this website to share my life, work, and insights with you.
 					I hope you'll find something here that inspires you, informs you, or just makes you smile.
-					Feel free to explore the site and get to know me better.
 					If you have any common interests with me, please don't hesitate to get in touch.<br>
 					欢迎来到我的个人网站！我是封凡，一名生物信息学方向的博士生。
 					我创建这个网站是为了与您分享我的生活、科研工作和乱七八糟的想法。
@@ -100,7 +99,8 @@
 				</p>
 			</div>
 		</div> <!-- / section -->
-		
+
+		<!--
 		<div class="row section featured topspace">
 			<h2 class="section-title"><span>
 				Recent Activities<br>
@@ -126,12 +126,12 @@
 					<p class="text-center"><a href="https://academic.oup.com/nar/article/51/D1/D950/6786196" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Presentation in ISMB<br>做ISMB会议报告</h3>
+					<h3 class="text-center">Presentation in ISMB<br>ISMB会议报告</h3>
 					<p> I was invited to present my work CAESAR at ISMB2022 @Madison, Wisconsin. (2022-Aug-10) </p>
 					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
 				</div>
 			</div>
-		</div> <!-- / section -->
+		</div>  -->
 	
 		<div class="row section recentworks topspace">
 			
@@ -143,10 +143,10 @@
 			<div class="thumbnails recentworks row">
 
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="blog.html#genomickb">
+					<a class="thumbnail" href="blog/genomickb.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/202212_GKB.png" alt="">
-							<span class="cover"><span class="more">Research Work 科研 &rarr;</span></span>
+							<span class="cover"><span class="more">Research 科研 &rarr;</span></span>
 						</span>
 						<span class="title">"GenomicKB - a knowledge graph for the human genome"  <br>"GenomicKB: 人类基因组的知识图谱"</span>
 					</a>
@@ -189,10 +189,10 @@
 				</div>
 
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="blog.html#caesar">
+					<a class="thumbnail" href="blog/caesar.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/202204_CAESAR.png" alt="">
-							<span class="cover"><span class="more">Research Work 科研 &rarr;</span></span>
+							<span class="cover"><span class="more">Research 科研 &rarr;</span></span>
 						</span>
 						<span class="title">
 							CAESAR: predict 3D chromatin structure from epigenomics<br>
@@ -318,7 +318,6 @@
 		</div> <!-- /row of widgets -->
 	</div>
 </footer>
-
 
 
 <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
