--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -157,7 +157,7 @@
                 </ul>
 
                 <a id="teaching"></a>
-                <h3>Teaching</h3>
+                <h3>教学经历</h3>
                 <ul>
                     <li>研究生助教/讲师, <b>BIOINF 593/EECS 598</b> 计算生物学中的机器学习算法 (Machine Learning in Computational Biology), 密歇根大学, 2022秋季学期</li>
                 </ul>
