fixed minor typo

--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@
 					</li>
 					<li>
 						<a href="https://www.bilibili.com/video/BV1jv4y1G7wD/?spm_id_from=333.999.0.0">
-							Erie Lake Aerial filming <br>
+							Erie Lake aerial filming <br>
 							航拍伊利湖
 						</a> [2023-Jun-10]
 					</li>
