fixed the issued that nav bar is not displayed on narrower screens

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
 
 			<div class="navbar-collapse collapse">
 
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav" id="bs-example-navbar-collapse-1">
 					<li class="active"><a href="index.html">
 						Home<br>
 						主页
