added Google Analytics and updated the CV

--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDBSV0S0E3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-NDBSV0S0E3');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -123,6 +133,7 @@
                 <h3>论文发表</h3>
                 <b>已发表: (*表示共同第一作者)</b>
                 <ul>
+                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome. <i>Nucleic Acids Research</i>, gkad436 [影响因子: 19.2]</li>
                     <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. GenomicKB: a knowledge graph for human genomics.
                     <i>Nucleic Acids Research</i>, 51.D1 (2023): D950-D956. [影响因子: 19.2]</li>
                     <li>Zhang, Z., <b>Feng, F.</b>, & Liu, J. (2022). Characterizing collaborative transcription regulation with a graph-based
@@ -148,6 +159,7 @@
                 <a id="invitedtalks"></a>
                 <h3>学术报告</h3>
                 <ul>
+                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 法国 里昂, 2023/7</li>
                     <li>“A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome”, <i>Great Lakes Bioinformatics (GLBIO) conference</i>, 加拿大 蒙特利尔, 2023/5</li>
                     <li>“An overview of Hi-C downstream analysis”, <i>Chromatin 3D Folding Workshop</i>, 美国 休斯顿 得克萨斯大学休斯顿健康中心, 2023/3</li>
                     <li>“GenomicKB: a knowledge graph for human genome”, <i>Tools and Technology Seminar</i>, 美国 安娜堡 密歇根大学, 2023/1</li>
@@ -172,10 +184,10 @@
                 <a id="research"></a>
                 <h3>研究兴趣</h3>
                 <ul>
-                    <li>通过<b>统计学和机器学习</b>模型，联合分析人类<b>DNA三维结构</b>和基因组<b>表观遗传学</b>数据，理解正常人和各种疾病患者体内基因的调控机制</li>
-                    <li>开发基于<b>知识图谱</b>的人类多组学(包括表观遗传学组，转录组，三维基因组)数据整合平台</li>
+                    <li>使用<b>人工智能模型</b>从大规模测序数据中发现规律，理解人类基因组中的<b>转录调控</b>机制</li>
+                    <li>结合算法与实验数据，理解<b>DNA三维结构</b>在基因调控机制中的功能</li>
+                    <li>开发基于<b>知识图谱</b>的开放科学平台（数据库、搜索引擎、API）以帮助研究人员整合分析人类基因组/表观基因组/转录组/三维基因组数据</li>
                     <li>开发生物信息学领域中的<b>可解释人工智能</b>算法</li>
-                    <li>开发计算工具，从<b>Hi-C</b>等染色质接触图中提取信息理解人类三维基因组的运作模式</li>
                 </ul>
             </article>
             <!-- /Article -->
