--- a/cv_english.html
+++ b/cv_english.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDBSV0S0E3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-NDBSV0S0E3');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -123,6 +133,7 @@
                 <h3>Publication</h3>
                 <b>Accepted or published: (*co-first author)</b>
                 <ul>
+                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome. <i>Nucleic Acids Research</i>, gkad436</li>
                     <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. GenomicKB: a knowledge graph for human genomics.
                     <i>Nucleic Acids Research</i>, 51.D1 (2023): D950-D956.</li>
                     <li>Zhang, Z., <b>Feng, F.</b>, & Liu, J. (2022). Characterizing collaborative transcription regulation with a graph-based
@@ -148,6 +159,7 @@
                 <a id="invitedtalks"></a>
                 <h3>Invited Talks</h3>
                 <ul>
+                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Lyon, France, July 2023</li>
                     <li>“A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome”, <i>Great Lakes Bioinformatics (GLBIO) conference</i>, Montreal, Canada, May 2023</li>
                     <li>“An overview of Hi-C downstream analysis”, <i>Chromatin 3D Folding Workshop</i>, UT Health, Houston, USA, March 2023</li>
                     <li>“GenomicKB: a knowledge graph for human genome”, <i>Tools and Technology Seminar</i>, University of Michigan, Ann Arbor, USA, January 2023</li>
