--- a/cv_english.html
+++ b/cv_english.html
@@ -37,53 +37,32 @@
     <div id="head" class="parallax" parallax-speed="2">
         <h1 id="logo" class="text-center">
             <img class="img-circle" src="assets/images/fan_portrait.jpg" alt="">
-            <span class="title">Fan Feng (封凡)</span>
+            <span class="title">Fan Feng</span>
             <span class="tagline">
-				Ph.D. candidate @ University of Michigan<br>
-				密歇根大学 博士生<br>
-				Alumni @ Peking University<br>
-				北京大学 毕业生
-			</span>
-            <!--<a href="">fanfeng@umich.edu</a></span> -->
+                Research Fellow<br>
+                Department of Medicine, Vanderbilt University Medical Center<br>
+                <br>
+                Ph.D. in Bioinformatics, University of Michigan - Ann Arbor<br>
+                B.Sc. in Chemical Biology, Peking University
+            </span>
         </h1>
     </div>
 
     <nav class="navbar navbar-default navbar-sticky">
         <div class="container-fluid">
-
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
             </div>
-
+            
             <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">
-                        Home<br>
-                        主页
-                    </a></li>
-                    <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Resume<br>
-                            简历
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="cv_english.html">English Version 英文版</a></li>
-                            <li><a href="cv_chinese.html">Chinese Version 中文版</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">
-                        Activities<br>
-                        动态
-                    </a></li>
-                    <li><a href="blog.html">
-                        Blog & Vlog<br>
-                        博客 & 视频
-                    </a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="cv_english.html">Resume</a></li>
+                    <li><a href="blog.html">Activities</a></li>
+                    <li class="pull-right"><a href="cv_chinese.html">中文</a></li>
                 </ul>
-
-            </div><!--/.nav-collapse -->
-        </div>
+            </div><!--/.nav-collapse -->            
+        </div>    
     </nav>
 </header>
 
@@ -97,12 +76,13 @@
             <aside class="col-sm-2 sidebar sidebar-right">
 
                 <ul class="nav text-right nav-side">
-                    <li class="active"><a href="#education">Education</a></li>
+                    <li class="active"><a href="#work">Work Experience</a></li>
+                    <li><a href="#education">Education</a></li>
                     <li><a href="#publication">Publication</a></li>
                     <li><a href="#invitedtalks">Talks</a></li>
                     <li><a href="#teaching">Teaching</a></li>
                     <li><a href="#review">Peer Review</a></li>
-                    <li><a href="#research">Research Interest</a></li>
+                    <li><a href="#award">Awards</a></li>
                 </ul>
 
             </aside>
@@ -110,11 +90,25 @@
 
             <!-- Article main content -->
             <article class="col-sm-10 maincontent">
+                <a id="work"></a>
+                <h3>Work Experience</h3>
+                <p>
+                    <b>Vanderbilt University Medical Center, Department of Medicine</b><br>
+                    Research Fellow, Feb. 2024 - Present
+                </p>
+                <b>Research Interest</b>
+                <ul>
+                    <li>Using <b>statistical</b> and <b>machine learning</b> models to understand islet biology and diabetes</li>
+                    <li>Explore the application of <b>vision-language models</b> in biomedical data, espectially in the context of islet biology and diabetes</li>
+                    <li>Develop data integration tools based on <b>knowledge graphs</b> to jointly analyze human genomic/epigenomic/transcriptome/4D genome data</li>
+                    <li>Chromatin 3D structural pattern analysis</li>
+                </ul>
+                
                 <a id="education"></a>
                 <h3>Education</h3>
                 <p>
                     <b>University of Michigan – Ann Arbor, Depart. of Computational Medicine and Bioinformatics (DCMB)</b><br>
-                    Ph.D. Bioinformatics, Sep. 2018 - <br>
+                    Ph.D. Bioinformatics, Sep. 2018 - Dec. 2023 <br>
                     Advisor: <a href="https://jieliu6.github.io/">Dr. Jie Liu</a>
                 </p>
 
@@ -133,16 +127,20 @@
                 <h3>Publication</h3>
                 <b>Accepted or published: (*co-first author)</b>
                 <ul>
-                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome. <i>Nucleic Acids Research</i>, gkad436</li>
-                    <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. GenomicKB: a knowledge graph for human genomics.
-                    <i>Nucleic Acids Research</i>, 51.D1 (2023): D950-D956.</li>
+                    <li>Tao., Y., <b>Feng, F.</b>, Luo, X., & Liu., J. (2024). CNTools: A computational toolbox for cellular neighborhood analysis from cell images.
+                    <i>PLos Computational Biology</i>, 20.8 (2024): e1012344.</li>
+                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu, J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome.
+                    <i>Nucleic Acids Research</i>, 51(12), 5931-5947.</li>
+                    <li>IGVF Consortium (2024). Deciphering the impact of genomic variation on function. <i>Nature</i>, 633(8028), 47-57.</li>
+                    <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. (2023). GenomicKB: a knowledge graph for human genomics.
+                    <i>Nucleic Acids Research</i>, 51.D1, D950-D956.</li>
                     <li>Zhang, Z., <b>Feng, F.</b>, & Liu, J. (2022). Characterizing collaborative transcription regulation with a graph-based
                     deep learning approach. <i>PLoS Computational Biology</i>, 18(6), e1010162.</li>
                     <li><b>Feng, F.</b>, Yao, Y., Wang, X. Q. D., Zhang, X., & Liu, J. (2022). Connecting high-resolution 3D chromatin
                     organization with epigenomics. <i>Nature Communications</i>, 13(1), 1-10.</li>
                     <li>Li, X., <b>Feng, F.</b>, Pu, H., Leung, W. Y., & Liu, J. (2021). scHiCTools: A computational toolbox for analyzing
                     single-cell Hi-C data. <i>PLoS Computational Biology</i>, 17(5), e1008978.</li>
-                    <li>Himadewi, P.*, Wang, X. Q. D.*, <b>Feng, F.*</b>, Gore, H., Liu, Y., Yu, L., ... & Zhang, X. (2021). 3’HS1 CTCF
+                    <li>Himadewi, P.*, Wang, X. Q. D.*, <b>Feng, F.*</b>, Gore, H., Liu, Y., Yu, L., ... & Zhang, X. (2021). 3'HS1 CTCF
                     binding site in human β-globin locus regulates fetal hemoglobin expression. <i>Elife</i>, 10, e70557.</li>
                     <li>Zhang, X., Wang, X. Q. D., Gore, H., Himadewi, P., <b>Feng, F.</b>, & Liu, J. (2020).
                     3D Genomics of Acute Meyloid Leukemia Reveals the Imbalance between DNA Methylation Canyon Interactions and Leukemic Specific Enhancer Network Interactions. <i>Blood</i>, 136, 45.</li>
@@ -150,21 +148,26 @@
                 </ul>
                 <b>Submitted, under review, or preprint:</b>
                 <ul>
-                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome (under review by <i>Nucleic Acids Research</i>)</li>
-                    <li>Tao., Y., <b>Feng, F.</b>, Luo, X., & Liu., J. CNTools: A computational toolbox for cellular neighborhood analysis from cell images (under review by <i>Nature Communications</i>)</li>
-                    <li><b>Feng, F.</b>, Moran, S. P., & Liu, J. Quagga: a stripe caller for chromatin contact maps (submitted)</li>
-                    <li>Wang, X. Q. D., Gore, H., Himadewi, P., <b>Feng, F.</b>, Yang, L., ... & Zhang, X. (2020). Three-dimensional regulation of HOXA cluster genes by a cis-element in hematopoietic stem cell and leukemia. <i>bioRxiv</i>.</li>
+                    <li>Huang, Y., Han, Z., Luo, X., ..., <b>Feng, F.</b>, ... & Liu, J. (2024). Building a literature knowledge base towards transparent biomedical AI. (under review by <i>Nature Machine Intelligence</i>)</li>
+                    <li>Hong, C. K., <b>Feng, F.*</b>, Ramanathan, V., Liu, J., & Hansen, A. S. (2025). Genome structure mapping with high-resolution 3D genomics and deep learning. (under review by <i>Science</i>)</li>
+                    <li>Luo, X., Huang, Y., Tao, Y.,<b>Feng, F.</b>, Hopkirk, A., Bate, T. S., ... & Liu, J. (2024). CelLink: integrating single-cell multi-omics data with weak feature linkage and imbalanced cell populations. (under review by <i>Nucleic Acids Research</i>)</li>
+                    <li>Saunders, D. C., Hart, N., Pan, F. C., ..., <b>Feng, F.</b>, ... & Brissova, M. (2024). Mapping histological and functional maturation of human endocrine pancreas across early postnatal periods. (under review by <i>Nature Communications</i>)</li>
+                    <li>Evans-Molina, C., Pettway, Y. D., Saunders, ..., <b>Feng, F.</b>, ... & Brissova, M. (2024). Heterogeneous endocrine cell composition defines human islet functional phenotypes. (under review by <i>Nature Communications</i>)</li>
+                    <li>Varshney, A., Manickam, N., Orchard, P., Tovar, ..., <b>Feng, F.</b>, ... & Parker, S. C. (2024). Population-scale skeletal muscle single-nucleus multi-omic profiling reveals extensive context specific genetic regulation. bioRxiv.</li>
+                    <li><b>Feng, F.</b>, Moran, S. P., & Liu, J. (2024). Quagga: a stripe caller for chromatin contact maps (under review by <i>Genome Research</i>)</li>
                 </ul>
 
                 <a id="invitedtalks"></a>
                 <h3>Invited Talks</h3>
                 <ul>
-                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Lyon, France, July 2023</li>
-                    <li>“A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome”, <i>Great Lakes Bioinformatics (GLBIO) conference</i>, Montreal, Canada, May 2023</li>
-                    <li>“An overview of Hi-C downstream analysis”, <i>Chromatin 3D Folding Workshop</i>, UT Health, Houston, USA, March 2023</li>
-                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Tools and Technology Seminar</i>, University of Michigan, Ann Arbor, USA, January 2023</li>
-                    <li>“Connecting high-resolution 3D chromatin organization with epigenomics”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Madison, USA, July 2022</li>
-                    <li>“An accurate and interpretable model for predicting high-resolution 3D chromatin organization”, <i>4DN Consortium Joint Analysis Working Group</i>, September 2019</li>
+                    <li>"Defining human pancreatic cell composition and spatial distribution with machine learning methods", AI in Precision Medicine of Diabetes and Other Chronic Diseases Workshop, Rockville, USA, October 2024</li>
+                    <li>"Application of knowledge graphs in biomedical fields", CCHC Omics Seminar, Nashville, USA, October 2024</li>
+                    <li>"GenomicKB: a knowledge graph for human genome", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Lyon, France, July 2023</li>
+                    <li>"A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome", <i>Great Lakes Bioinformatics (GLBIO) conference</i>, Montreal, Canada, May 2023</li>
+                    <li>"An overview of Hi-C downstream analysis", <i>Chromatin 3D Folding Workshop</i>, UT Health, Houston, USA, March 2023</li>
+                    <li>"GenomicKB: a knowledge graph for human genome", <i>Tools and Technology Seminar</i>, University of Michigan, Ann Arbor, USA, January 2023</li>
+                    <li>"Connecting high-resolution 3D chromatin organization with epigenomics", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Madison, USA, July 2022</li>
+                    <li>"An accurate and interpretable model for predicting high-resolution 3D chromatin organization", <i>4DN Consortium Joint Analysis Working Group</i>, September 2019</li>
                 </ul>
 
                 <a id="teaching"></a>
@@ -176,18 +179,23 @@
                 <a id="review"></a>
                 <h3>Invited Peer Review Experience</h3>
                 <ul>
+                    <li>Co-reviewer, Nature Metabolism, since 2024</li>
+                    <li>Co-reviewer, Nature Communications, since 2023</li>
                     <li>Reviewer, PLoS Computational Biology, since 2022</li>
                     <li>Reviewer, Conference on Neural Information Processing Systems (NeurIPS) AI4Science Workshop, since 2021</li>
                     <li>Reviewer, International Conference on Machine Learning (ICML) AI4Science Workshop, since 2022</li>
+                    <li>Reviewer, International Conference on Machine Learning (ICML) Generative AI and Biology (GenBio) Workshop, since 2023</li>
                 </ul>
 
-                <a id="research"></a>
-                <h3>Research Interest</h3>
+                <a id="award"></a>
+                <h3>Awards</h3>
                 <ul>
-                    <li>Using <b>statistical</b> and <b>machine learning</b> models to jointly analyze <b>3D chromatin structural information</b> with genomic features in order to understand the mechanisms of gene regulation in diseases</li>
-                    <li>Develop open web tools and machine learning platforms based on <b>knowledge graphs</b> to jointly analyze human genomic/epigenomic/transcriptome/4D genome data</li>
-                    <li>Develop <b>deep learning interpretation</b> tools for bioinformatics models</li>
-                    <li>Develop tools to analyze chromatin 3D structural patterns in Hi-C contact maps</li>
+                    <li>Data Resource Trainee Scholar Award, Integrated Islet Distribution Program (IIDP), 2025</li>
+                    <li>AI Workshop Young Scholar Travel Award, National Institute of Diabetes and Digestive and Kidney Disease (NIDDK), 2024</li>
+                    <li>Rackham Conference Travel Award, University of Michigan, 2022 and 2023</li>
+                    <li>Program in Biomedical Sciences Fellowship, University of Michigan, 2019</li>
+                    <li>Outstanding Graduates of Peking University and CCME, 2018</li>
+                    <li>Gold Medal in Chinese Chemistry Olympiad (Top 100 in China), 2013</li>
                 </ul>
             </article>
             <!-- /Article -->
