--- a/blog_cn.html
+++ b/blog_cn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NDBSV0S0E3"></script>
@@ -16,7 +16,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 
-	<title>Blog | Fan Feng Personal Website</title>
+	<title>博客 | 封凡个人网站</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 
@@ -37,13 +37,13 @@
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/fan_portrait.jpg" alt="">
-			<span class="title">Fan Feng</span>
+			<span class="title">封凡</span>
 			<span class="tagline">
-				Research Fellow<br>
-				Department of Medicine, Vanderbilt University Medical Center<br>
+				博士后研究员<br>
+				范德堡大学医学中心<br>
 				<br>
-				Ph.D. in Bioinformatics, University of Michigan - Ann Arbor<br>
-				B.Sc. in Chemical Biology, Peking University
+				生物信息学 博士，密歇根大学<br>
+				化学生物学 学士，北京大学
 			</span>
 		</h1>
 	</div>
@@ -56,10 +56,10 @@
 			
 			<div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="cv_english.html">Resume</a></li>
-					<li class="active"><a href="blog.html">Activities</a></li>
-					<li class="pull-right"><a href="blog_cn.html">中文</a></li>
+					<li><a href="index_cn.html">主页</a></li>
+					<li><a href="cv_chinese.html">简历</a></li>
+					<li class="active"><a href="blog_cn.html">动态</a></li>
+					<li class="pull-right"><a href="blog.html">English</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->			
 		</div>	
@@ -70,27 +70,22 @@
 	<div class="container">
 		<div class="col-sm-6 row topspace">
 			<a id="work"></a>
-			<h3>Research Work</h3>
+			<h3>科研工作</h3>
 			<div>
 				<ul>
 					<li>
-						<a href="blog/fingerprint.html">
-							Multiplexed image analysis: poster presentation in 2025 ADA scientific sessions
-						</a> [2025-Jun-18]
-					</li>
-					<li>
 						<a href="blog/genomickb.html">
-							GenomicKB: a knowledge graph for the human genome
+							GenomicKB: 人类基因组学的知识图谱
 						</a> [2023-Apr-6]
 					</li>
 					<li>
 						<a href="blog/caesar.html">
-							CAESAR: connecting 3D chromatin structure with epigenomics
+							CAESAR: 通过表观遗传学准确预测三维基因组
 						</a> [2022-Apr-30]
 					</li>
 					<li>
 						<a href="blog/schictools.html">
-							scHiCTools: A computational toolbox for analyzing single-cell Hi-C data
+							scHiCTools: 单细胞Hi-C数据的分析工具
 						</a> [2021-May-20]
 					</li>
 				</ul>
@@ -99,22 +94,22 @@
 
 		<div class="col-sm-5 col-sm-offset-1 row topspace">
 			<a id="life"></a>
-			<h3>Unlocking the world!</h3>
+			<h3>生活记录</h3>
 			<div>
 				<ul>
 					<li>
 						<a href="https://www.bilibili.com/video/BV1jA411r73Y/">
-							Bremen soccer game vlog
+							不来梅观赛记录
 						</a> [2023-Jan-28]
 					</li>
 					<li>
 						<a href="https://www.bilibili.com/video/BV19M411W75A/">
-							Rome vlog
+							罗马旅行记录
 						</a> [2023-Jan-24]
 					</li>
 					<li>
 						<a href="https://www.bilibili.com/video/BV1jv4y1G7wD/?spm_id_from=333.999.0.0">
-							Erie Lake aerial filming
+							航拍伊利湖
 						</a> [2023-Jun-10]
 					</li>
 				</ul>
@@ -127,19 +122,19 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">Contact</h3>
+				<h3 class="widget-title">联系我</h3>
 				<div class="widget-body">
-					<p>E-mail:<br>
+					<p>邮箱:<br>
 						<a href="mailto:#">fanfeng@umich.edu</a><br>
 						<br>
-						Address:<br>
+						地址:<br>
 						Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
 					</p>
 				</div>
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">Follow me</h3>
+				<h3 class="widget-title">关注我</h3>
 				<div class="widget-body">
 					<p class="follow-me-icons">
 						<a href="https://www.linkedin.com/in/fan-feng-974842120/"><i class="fa fa-linkedin fa-2"></i></a>
@@ -151,7 +146,7 @@
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">Thanks for visiting!</h3>
+				<h3 class="widget-title">感谢来访！</h3>
 				<div class="widget-body">
 					<p></p>
 				</div>
@@ -177,4 +172,4 @@
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="assets/js/template.js"></script>
 </body>
-</html>
+</html> 
