--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -37,53 +37,32 @@
     <div id="head" class="parallax" parallax-speed="2">
         <h1 id="logo" class="text-center">
             <img class="img-circle" src="assets/images/fan_portrait.jpg" alt="">
-            <span class="title">Fan Feng (封凡)</span>
+            <span class="title">封凡</span>
             <span class="tagline">
-				Ph.D. candidate @ University of Michigan<br>
-				密歇根大学 博士生<br>
-				Alumni @ Peking University<br>
-				北京大学 毕业生
+				博士后研究员<br>
+				范德堡大学医学中心<br>
+				<br>
+				生物信息学 博士，密歇根大学<br>
+				化学生物学 学士，北京大学
 			</span>
-            <!--<a href="">fanfeng@umich.edu</a></span> -->
         </h1>
     </div>
 
     <nav class="navbar navbar-default navbar-sticky">
         <div class="container-fluid">
-
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
             </div>
-
+            
             <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">
-                        Home<br>
-                        主页
-                    </a></li>
-                    <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Resume<br>
-                            简历
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="cv_english.html">English Version 英文版</a></li>
-                            <li><a href="cv_chinese.html">Chinese Version 中文版</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">
-                        Activities<br>
-                        动态
-                    </a></li>
-                    <li><a href="blog.html">
-                        Blog & Vlog<br>
-                        博客 & 视频
-                    </a></li>
+                    <li><a href="index_cn.html">主页</a></li>
+                    <li class="active"><a href="cv_chinese.html">简历</a></li>
+                    <li><a href="blog_cn.html">动态</a></li>
+                    <li class="pull-right"><a href="cv_english.html">English</a></li>
                 </ul>
-
-            </div><!--/.nav-collapse -->
-        </div>
+            </div><!--/.nav-collapse -->			
+        </div>	
     </nav>
 </header>
 
@@ -97,12 +76,13 @@
             <aside class="col-sm-2 sidebar sidebar-right">
 
                 <ul class="nav text-right nav-side">
-                    <li class="active"><a href="#education">教育经历</a></li>
+                    <li class="active"><a href="#work">工作经历</a></li>
+                    <li><a href="#education">教育经历</a></li>
                     <li><a href="#publication">论文发表</a></li>
                     <li><a href="#invitedtalks">学术报告</a></li>
                     <li><a href="#teaching">教学经历</a></li>
                     <li><a href="#review">审稿经历</a></li>
-                    <li><a href="#research">研究兴趣</a></li>
+                    <li><a href="#awards">获奖情况</a></li>
                 </ul>
 
             </aside>
@@ -110,11 +90,25 @@
 
             <!-- Article main content -->
             <article class="col-sm-10 maincontent">
+                <a id="work"></a>
+                <h3>工作经历</h3>
+                <p>
+                    <b>范德堡大学医学中心</b><br>
+                    博士后研究员, 2024/2 - 至今
+                </p>
+                <b>研究兴趣</b>
+                <ul>
+                    <li>利用统计学和机器学习模型来理解胰岛生物学和糖尿病机制</li>
+                    <li>探索视觉-语言模型在生物医学数据中的应用，特别是在胰岛生物学和糖尿病研究中的潜力</li>
+                    <li>基于知识图谱开发数据整合工具，以联合分析人类的基因组、表观基因组、转录组和四维基因组数据</li>
+                    <li>染色质三维结构模式分析</li>
+                </ul>
+                
                 <a id="education"></a>
                 <h3>教育经历</h3>
                 <p>
                     <b>密歇根大学安娜堡分校, 计算药物学与生物信息学系</b><br>
-                    生物信息学 博士, 2018/9 - <br>
+                    生物信息学 博士, 2018/9 - 2023/12 <br>
                     导师: <a href="https://jieliu6.github.io/">Dr. Jie Liu</a>
                 </p>
 
@@ -133,38 +127,47 @@
                 <h3>论文发表</h3>
                 <b>已发表: (*表示共同第一作者)</b>
                 <ul>
-                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome. <i>Nucleic Acids Research</i>, gkad436 [影响因子: 19.2]</li>
-                    <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. GenomicKB: a knowledge graph for human genomics.
-                    <i>Nucleic Acids Research</i>, 51.D1 (2023): D950-D956. [影响因子: 19.2]</li>
+                    <li>Tao., Y., <b>Feng, F.</b>, Luo, X., & Liu., J. (2024). CNTools: A computational toolbox for cellular neighborhood analysis from cell images.
+                    <i>PLos Computational Biology</i>, 20.8 (2024): e1012344.</li>
+                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu, J. (2023). A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome.
+                    <i>Nucleic Acids Research</i>, 51(12), 5931-5947.</li>
+                    <li>IGVF Consortium (2024). Deciphering the impact of genomic variation on function. <i>Nature</i>, 633(8028), 47-57.</li>
+                    <li><b>Feng, F.</b>, Tang, F., Gao, Y., Zhu, D., ... & Liu, J. (2023). GenomicKB: a knowledge graph for human genomics.
+                    <i>Nucleic Acids Research</i>, 51.D1, D950-D956.</li>
                     <li>Zhang, Z., <b>Feng, F.</b>, & Liu, J. (2022). Characterizing collaborative transcription regulation with a graph-based
-                    deep learning approach. <i>PLoS Computational Biology</i>, 18(6), e1010162. [影响因子: 4.8]</li>
+                    deep learning approach. <i>PLoS Computational Biology</i>, 18(6), e1010162.</li>
                     <li><b>Feng, F.</b>, Yao, Y., Wang, X. Q. D., Zhang, X., & Liu, J. (2022). Connecting high-resolution 3D chromatin
-                    organization with epigenomics. <i>Nature Communications</i>, 13(1), 1-10. [影响因子: 17.7]</li>
+                    organization with epigenomics. <i>Nature Communications</i>, 13(1), 1-10.</li>
                     <li>Li, X., <b>Feng, F.</b>, Pu, H., Leung, W. Y., & Liu, J. (2021). scHiCTools: A computational toolbox for analyzing
-                    single-cell Hi-C data. <i>PLoS Computational Biology</i>, 17(5), e1008978. [影响因子: 4.8]</li>
-                    <li>Himadewi, P.*, Wang, X. Q. D.*, <b>Feng, F.*</b>, Gore, H., Liu, Y., Yu, L., ... & Zhang, X. (2021). 3’HS1 CTCF
-                    binding site in human β-globin locus regulates fetal hemoglobin expression. <i>Elife</i>, 10, e70557. [影响因子: 8.7]</li>
+                    single-cell Hi-C data. <i>PLoS Computational Biology</i>, 17(5), e1008978.</li>
+                    <li>Himadewi, P.*, Wang, X. Q. D.*, <b>Feng, F.*</b>, Gore, H., Liu, Y., Yu, L., ... & Zhang, X. (2021). 3'HS1 CTCF
+                    binding site in human β-globin locus regulates fetal hemoglobin expression. <i>Elife</i>, 10, e70557.</li>
                     <li>Zhang, X., Wang, X. Q. D., Gore, H., Himadewi, P., <b>Feng, F.</b>, & Liu, J. (2020).
-                    3D Genomics of Acute Meyloid Leukemia Reveals the Imbalance between DNA Methylation Canyon Interactions and Leukemic Specific Enhancer Network Interactions. <i>Blood</i>, 136, 45. [影响因子: 25.5]</li>
-                    <li><b>Feng, F.</b>, Lai, L., & Pei, J. (2018). Computational chemical synthesis analysis and pathway design. <i>Frontiers in Chemistry</i>, 6, 199. [影响因子: 5.6]</li>
+                    3D Genomics of Acute Meyloid Leukemia Reveals the Imbalance between DNA Methylation Canyon Interactions and Leukemic Specific Enhancer Network Interactions. <i>Blood</i>, 136, 45.</li>
+                    <li><b>Feng, F.</b>, Lai, L., & Pei, J. (2018). Computational chemical synthesis analysis and pathway design. <i>Frontiers in Chemistry</i>, 6, 199.</li>
                 </ul>
                 <b>已提交/审稿中/预印本:</b>
                 <ul>
-                    <li>Zhang, Z., <b>Feng, F.</b>, Qiu, Y., & Liu., J. A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome (提交至<i>Nucleic Acids Research</i>，正在审稿)</li>
-                    <li>Tao., Y., <b>Feng, F.</b>, Luo, X., & Liu., J. CNTools: A computational toolbox for cellular neighborhood analysis from cell images (提交至<i>Nature Communications</i>，正在审稿)</li>
-                    <li><b>Feng, F.</b>, Moran, S. P., & Liu, J. Quagga: a stripe caller for chromatin contact maps (已提交)</li>
-                    <li>Wang, X. Q. D., Gore, H., Himadewi, P., <b>Feng, F.</b>, Yang, L., ... & Zhang, X. (2020). Three-dimensional regulation of HOXA cluster genes by a cis-element in hematopoietic stem cell and leukemia. <i>bioRxiv</i>.</li>
+                    <li>Huang, Y., Han, Z., Luo, X., ..., <b>Feng, F.</b>, ... & Liu, J. (2024). Building a literature knowledge base towards transparent biomedical AI. (under review by <i>Nature Machine Intelligence</i>)</li>
+                    <li>Hong, C. K., <b>Feng, F.*</b>, Ramanathan, V., Liu, J., & Hansen, A. S. (2025). Genome structure mapping with high-resolution 3D genomics and deep learning. (under review by <i>Science</i>)</li>
+                    <li>Luo, X., Huang, Y., Tao, Y., <b>Feng, F.</b>, Hopkirk, A., Bate, T. S., ... & Liu, J. (2024). CelLink: integrating single-cell multi-omics data with weak feature linkage and imbalanced cell populations. (under review by <i>Nucleic Acids Research</i>)</li>
+                    <li>Saunders, D. C., Hart, N., Pan, F. C., ..., <b>Feng, F.</b>, ... & Brissova, M. (2024). Mapping histological and functional maturation of human endocrine pancreas across early postnatal periods. (under review by <i>Nature Communications</i>)</li>
+                    <li>Evans-Molina, C., Pettway, Y. D., Saunders, ..., <b>Feng, F.</b>, ... & Brissova, M. (2024). Heterogeneous endocrine cell composition defines human islet functional phenotypes. (under review by <i>Nature Communications</i>)</li>
+                    <li>Varshney, A., Manickam, N., Orchard, P., Tovar, ..., <b>Feng, F.</b>, ... & Parker, S. C. (2024). Population-scale skeletal muscle single-nucleus multi-omic profiling reveals extensive context specific genetic regulation. bioRxiv.</li>
+                    <li><b>Feng, F.</b>, Moran, S. P., & Liu, J. (2024). Quagga: a stripe caller for chromatin contact maps (under review by <i>Genome Research</i>)</li>
                 </ul>
 
                 <a id="invitedtalks"></a>
                 <h3>学术报告</h3>
                 <ul>
-                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 法国 里昂, 2023/7</li>
-                    <li>“A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome”, <i>Great Lakes Bioinformatics (GLBIO) conference</i>, 加拿大 蒙特利尔, 2023/5</li>
-                    <li>“An overview of Hi-C downstream analysis”, <i>Chromatin 3D Folding Workshop</i>, 美国 休斯顿 得克萨斯大学休斯顿健康中心, 2023/3</li>
-                    <li>“GenomicKB: a knowledge graph for human genome”, <i>Tools and Technology Seminar</i>, 美国 安娜堡 密歇根大学, 2023/1</li>
-                    <li>“Connecting high-resolution 3D chromatin organization with epigenomics”, <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 美国 麦迪逊, 2022/7</li>
-                    <li>“An accurate and interpretable model for predicting high-resolution 3D chromatin organization”, <i>4DN Consortium Joint Analysis Working Group</i>, 云端会议 2019/9</li>
+                    <li>"Defining human pancreatic cell composition and spatial distribution with machine learning methods", AI in Precision Medicine of Diabetes and Other Chronic Diseases Workshop, 美国 罗克韦尔, 2024/10</li>
+                    <li>"Application of knowledge graphs in biomedical fields", CCHC Omics Seminar, 美国 纳什维尔, 2024/10</li>
+                    <li>"GenomicKB: a knowledge graph for human genome", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 法国 里昂, 2023/7</li>
+                    <li>"A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome", <i>Great Lakes Bioinformatics (GLBIO) conference</i>, 加拿大 蒙特利尔, 2023/5</li>
+                    <li>"An overview of Hi-C downstream analysis", <i>Chromatin 3D Folding Workshop</i>, 美国 休斯顿 得克萨斯大学休斯顿健康中心, 2023/3</li>
+                    <li>"GenomicKB: a knowledge graph for human genome", <i>Tools and Technology Seminar</i>, 美国 安娜堡 密歇根大学, 2023/1</li>
+                    <li>"Connecting high-resolution 3D chromatin organization with epigenomics", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 美国 麦迪逊, 2022/7</li>
+                    <li>"An accurate and interpretable model for predicting high-resolution 3D chromatin organization", <i>4DN Consortium Joint Analysis Working Group</i>, 云端会议 2019/9</li>
                 </ul>
 
                 <a id="teaching"></a>
@@ -176,18 +179,23 @@
                 <a id="review"></a>
                 <h3>审稿经历</h3>
                 <ul>
+                    <li>期刊审稿人（Co-reviewer）, Nature Metabolism</li>
+                    <li>期刊审稿人（Co-reviewer）, Nature Communications</li>
                     <li>期刊审稿人, PLoS Computational Biology</li>
                     <li>会议审稿人, Conference on Neural Information Processing Systems (NeurIPS) AI4Science Workshop</li>
                     <li>会议审稿人, International Conference on Machine Learning (ICML) AI4Science Workshop</li>
+                    <li>会议审稿人, International Conference on Machine Learning (ICML) Generative AI and Biology (GenBio) Workshop</li>
                 </ul>
 
-                <a id="research"></a>
-                <h3>研究兴趣</h3>
+                <a id="award"></a>
+                <h3>Awards</h3>
                 <ul>
-                    <li>使用<b>人工智能模型</b>从大规模测序数据中发现规律，理解人类基因组中的<b>转录调控</b>机制</li>
-                    <li>结合算法与实验数据，理解<b>DNA三维结构</b>在基因调控机制中的功能</li>
-                    <li>开发基于<b>知识图谱</b>的开放科学平台（数据库、搜索引擎、API）以帮助研究人员整合分析人类基因组/表观基因组/转录组/三维基因组数据</li>
-                    <li>开发生物信息学领域中的<b>可解释人工智能</b>算法</li>
+                    <li>Data Resource Trainee Scholar Award, Integrated Islet Distribution Program (IIDP), 2025</li>
+                    <li>AI Workshop Young Scholar Travel Award, National Institute of Diabetes and Digestive and Kidney Disease (NIDDK), 2024</li>
+                    <li>Rackham Conference Travel Award, University of Michigan, 2022 and 2023</li>
+                    <li>Program in Biomedical Sciences Fellowship, University of Michigan, 2019</li>
+                    <li>北京大学优秀毕业生/化学与分子工程学院优秀毕业生, 2018</li>
+                    <li>中国化学奥林匹克竞赛决赛金牌 (前100名), 2013</li>
                 </ul>
             </article>
             <!-- /Article -->
