--- a/index.html
+++ b/index.html
@@ -37,63 +37,37 @@
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/fan_portrait.jpg" alt="">
-			<span class="title">Fan Feng (封凡)</span>
+			<span class="title">Fan Feng</span>
 			<span class="tagline">
-				Ph.D. candidate<br>
-				Department of Computational Medicine and Bioinformatics, University of Michigan<br>
-				密歇根大学 计算药物学与生物信息学系 博士生<br>
+				Research Fellow<br>
+				Department of Medicine, Vanderbilt University Medical Center<br>
 				<br>
-				Alumni<br>
-				College of Chemistry and Molecular Engineering, Peking University<br>
-				北京大学 化学与分子工程学院 毕业生
+				Ph.D. in Bioinformatics, University of Michigan - Ann Arbor<br>
+				B.Sc. in Chemical Biology, Peking University
 			</span>
-				<!--<a href="">fanfeng@umich.edu</a></span> -->
 		</h1>
 	</div>
 
 	<nav class="navbar navbar-default navbar-sticky">
 		<div class="container-fluid">
-			
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			</div>
 			
 			<div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">
-						Home<br>
-						主页
-					</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							Resume<br>
-							简历
-							<b class="caret"></b>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a href="cv_english.html">English Version 英文版</a></li>
-							<li><a href="cv_chinese.html">Chinese Version 中文版</a></li>
-						</ul>
-					</li>
-					<li><a href="about.html">
-						Activities<br>
-						动态
-					</a></li>
-					<li><a href="blog.html">
-						Blog & Vlog<br>
-						博客 & 视频
-					</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="cv_english.html">Resume</a></li>
+					<li><a href="blog.html">Activities</a></li>
+					<li class="pull-right"><a href="index_cn.html">中文</a></li>
 				</ul>
-			
 			</div><!--/.nav-collapse -->			
 		</div>	
 	</nav>
 </header>
 
 <main id="main">
-
 	<div class="container">
-		
 		<div class="row section topspace">
 			<div class="col-md-12">
 				<p class="lead text-center text-muted">
@@ -101,195 +75,113 @@
 					My name is Fan, and I'm a researcher in bioinformatics.
 					I created this website to share my life, work, and insights with you.
 					I hope you'll find something here that inspires you, informs you, or just makes you smile.
-					If you have any common interests with me, please don't hesitate to get in touch.<br>
-					欢迎来到我的个人网站！我是封凡，一名生物信息学方向的博士生。
-					我创建这个网站是为了与您分享我的生活、科研工作和乱七八糟的想法。
-					如果您发现我们有着相同的学术兴趣或生活爱好，都期待您与我联系。
+					If you have any common interests with me, please don't hesitate to get in touch.
 				</p>
 			</div>
-		</div> <!-- / section -->
+		</div>
 
-		<!--
-		<div class="row section featured topspace">
-			<h2 class="section-title"><span>
-				Recent Activities<br>
-				最新动态
-			</span></h2>
-			<div class="row">
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Presentation in GLBIO<br>GLBIO会议报告</h3>
-					<p> I was invited to present my work about GenomicKB at GLBIO2022@Montreal, Canada. (2023-Mar-25) </p>
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Rome Vlog<br>罗马旅行记录</h3>
-					<p> Check the vlog video from Rome, Italy.
-						I went to the Colosseum, Pantheon, Vantican City, and watched a Series A soccer game! (2023-Jan-21) </p>
-					<p class="text-center"><a href="https://www.bilibili.com/video/BV19M411W75A/" class="btn btn-action">Read more</a></p>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">
-						New Paper Published!<br>新文章发表！
-					</h3>
-					<p> My paper "GenomicKB: a Knowledge Graph for the Human Genome" was published on Nucleic Acids Research. (2023-Jan-06) </p>
-					<p class="text-center"><a href="https://academic.oup.com/nar/article/51/D1/D950/6786196" class="btn btn-action">Read more</a></p>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Presentation in ISMB<br>ISMB会议报告</h3>
-					<p> I was invited to present my work CAESAR at ISMB2022 @Madison, Wisconsin. (2022-Aug-10) </p>
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
-				</div>
-			</div>
-		</div>  -->
-	
 		<div class="row section recentworks topspace">
-			
-			<h2 class="section-title"><span>
-				Recent Pictures & Videos<br>
-				近期照片 & 视频分享
-			</span></h2>
+			<h2 class="section-title"><span>Recent Pictures & Videos</span></h2>
 			
 			<div class="thumbnails recentworks row">
-
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="blog/genomickb.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/202212_GKB.png" alt="">
-							<span class="cover"><span class="more">Research 科研 &rarr;</span></span>
+							<span class="cover"><span class="more">Research &rarr;</span></span>
 						</span>
-						<span class="title">"GenomicKB - a knowledge graph for the human genome"  <br>"GenomicKB: 人类基因组的知识图谱"</span>
+						<span class="title">"GenomicKB - a knowledge graph for the human genome"</span>
 					</a>
 					<span class="details">
-						<a href="https://academic.oup.com/nar/article/51/D1/D950/6786196">Paper文章</a> |
-						<a href="https://gkb.dcmb.med.umich.edu/">Website网站</a></span>
-					<h4></h4>
-					<p></p>
+						<a href="https://academic.oup.com/nar/article/51/D1/D950/6786196">Paper</a> |
+						<a href="https://gkb.dcmb.med.umich.edu/">Website</a>
+					</span>
 				</div>
 
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="https://www.bilibili.com/video/BV1jA411r73Y/">
 						<span class="img">
 							<img src="assets/images/blog_picture/202301_Bremen.jpg" alt="">
-							<span class="cover"><span class="more">Travel 旅行 &rarr;</span></span>
+							<span class="cover"><span class="more">Travel &rarr;</span></span>
 						</span>
-						<span class="title">Watch the BREMEN vs Wolfsburg Soccer game <br>
-							现场观看不来梅vs沃尔夫斯堡的足球比赛</span>
+						<span class="title">Watch the BREMEN vs Wolfsburg Soccer game</span>
 					</a>
 					<span class="details">
-						<a href="https://www.bilibili.com/video/BV1jA411r73Y/">Video视频</a>
+						<a href="https://www.bilibili.com/video/BV1jA411r73Y/">Video</a>
 					</span>
-					<h4></h4>
-					<p></p>
 				</div>
 				
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="https://www.bilibili.com/video/BV19M411W75A/">
 						<span class="img">
 							<img src="assets/images/blog_picture/202301_Rome.jpg" alt="">
-							<span class="cover"><span class="more">Travel 旅行 &rarr;</span></span>
+							<span class="cover"><span class="more">Travel &rarr;</span></span>
 						</span>
-						<span class="title">Vlog from Rome, Italy<br>意大利罗马旅行记录</span>
+						<span class="title">Vlog from Rome, Italy</span>
 					</a>
 					<span class="details">
-						<a href="https://www.bilibili.com/video/BV19M411W75A/">Video视频</a>
+						<a href="https://www.bilibili.com/video/BV19M411W75A/">Video</a>
 					</span>
-					<h4></h4>
-					<p></p>
 				</div>
 
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="blog/caesar.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/202204_CAESAR.png" alt="">
-							<span class="cover"><span class="more">Research 科研 &rarr;</span></span>
+							<span class="cover"><span class="more">Research &rarr;</span></span>
 						</span>
-						<span class="title">
-							CAESAR: predict 3D chromatin structure from epigenomics<br>
-							CAESAR: 从表观遗传学预测三维基因组
-						</span>
+						<span class="title">CAESAR: predict 3D chromatin structure from epigenomics</span>
 					</a>
 					<span class="details">
-						<a href="https://www.nature.com/articles/s41467-022-29695-6">Paper文章</a> |
-						<a href="https://nucleome.dcmb.med.umich.edu/">Website网站</a> |
-						<a href="https://github.com/liu-bioinfo-lab/caesar">GitHub代码</a>
+						<a href="https://www.nature.com/articles/s41467-022-29695-6">Paper</a> |
+						<a href="https://nucleome.dcmb.med.umich.edu/">Website</a> |
+						<a href="https://github.com/liu-bioinfo-lab/caesar">GitHub</a>
 					</span>
-					<h4></h4>
-					<h4></h4>
-					<p></p>
 				</div>
 				
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="blog.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/201908_UN.jpg" alt="">
-							<span class="cover"><span class="more">Work 工作 &rarr;</span></span>
+							<span class="cover"><span class="more">Work &rarr;</span></span>
 						</span>
-						<span class="title">
-							Host a workshop at the UN civil society conference<br>
-							在联合国非政府组织会议上主持创意工坊
-						</span>
+						<span class="title">Host a workshop at the UN civil society conference</span>
 					</a>
 					<span class="details"><a href="blog.html">Blog</a></span>
-					<h4></h4>
-					<p></p>
 				</div>
 
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 					<a class="thumbnail" href="blog.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/201708_football.jpg" alt="">
-							<span class="cover"><span class="more">Life 生活 &rarr;</span></span>
+							<span class="cover"><span class="more">Life &rarr;</span></span>
 						</span>
-						<span class="title">
-							Soccer team member of CCME, Peking University<br>
-							北大化院足球队照片
-						</span>
+						<span class="title">Soccer team member of CCME, Peking University</span>
 					</a>
 					<span class="details"><a href="blog.html">Blog</a></span>
-					<h4></h4>
-					<p></p>
 				</div>
 			</div>
-
-		</div> <!-- /section -->
-
-<!--		<div class="row section clients topspace">-->
-<!--			<h2 class="section-title"><span>Clients</span></h2>-->
-<!--			<div class="col-lg-12">-->
-<!--				<p>-->
-<!--					<img src="assets/images/sample_clients.png" alt="">-->
-<!--				</p>-->
-<!--			</div>-->
-<!--		</div> &lt;!&ndash; /section &ndash;&gt;-->
-
-	</div>	<!-- /container -->
-
+		</div>
+	</div>
 </main>
 
 <footer id="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">
-					Contact<br>
-					联系我
-				</h3>
+				<h3 class="widget-title">Contact</h3>
 				<div class="widget-body">
-					<p>E-mail 邮箱:<br>
+					<p>E-mail:<br>
 						<a href="mailto:#">fanfeng@umich.edu</a><br>
 						<br>
-						Address 地址:<br>
+						Address:<br>
 						Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
-						<br>
 					</p>	
 				</div>
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">
-					Follow me<br>
-					关注我
-				</h3>
+				<h3 class="widget-title">Follow me</h3>
 				<div class="widget-body">
 					<p class="follow-me-icons">
 						<a href="https://www.linkedin.com/in/fan-feng-974842120/"><i class="fa fa-linkedin fa-2"></i></a>
@@ -301,33 +193,26 @@
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">
-					Thanks for visiting<br>
-					感谢来访！
-				</h3>
+				<h3 class="widget-title">Thanks for visiting!</h3>
 				<div class="widget-body">
-					<p> </p>
+					<p></p>
 				</div>
 			</div>
-
-		</div> <!-- /row of widgets -->
+		</div>
 	</div>
 </footer>
 
 <footer id="underfooter">
 	<div class="container">
 		<div class="row">
-			
 			<div class="col-md-6 widget">
 				<div class="widget-body">
 					<p>Template: Initio by GetTemplate</p>
 				</div>
 			</div>
-
-		</div> <!-- /row of widgets -->
+		</div>
 	</div>
 </footer>
-
 
 <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
