--- a/cv_english.html
+++ b/cv_english.html
@@ -211,14 +211,13 @@
         <div class="row">
             <div class="col-md-3 widget">
                 <h3 class="widget-title">
-                    Contact<br>
-                    联系我
+                    Contact
                 </h3>
                 <div class="widget-body">
-                    <p>E-mail 邮箱:<br>
+                    <p>E-mail:<br>
                         <a href="mailto:#">fanfeng@umich.edu</a><br>
                         <br>
-                        Address 地址:<br>
+                        Address:<br>
                         Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
                         <br>
                     </p>
@@ -227,8 +226,7 @@
 
             <div class="col-md-3 widget">
                 <h3 class="widget-title">
-                    Follow me<br>
-                    关注我
+                    Follow me
                 </h3>
                 <div class="widget-body">
                     <p class="follow-me-icons">
@@ -242,8 +240,7 @@
 
             <div class="col-md-3 widget">
                 <h3 class="widget-title">
-                    Thanks for visiting<br>
-                    感谢来访！
+                    Thanks for visiting
                 </h3>
                 <div class="widget-body">
                     <p> </p>
