--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -94,7 +94,8 @@
                 <h3>工作经历</h3>
                 <p>
                     <b>范德堡大学医学中心</b><br>
-                    博士后研究员, 2024/2 - 至今
+                    博士后研究员, 2024/2 - 至今<br>
+                    导师：<a href="https://www.powersbrissovaresearch.org/">Dr. Marcela Brissova</a>
                 </p>
                 <b>研究兴趣</b>
                 <ul>
