--- a/cv_english.html
+++ b/cv_english.html
@@ -93,8 +93,9 @@
                 <a id="work"></a>
                 <h3>Work Experience</h3>
                 <p>
-                    <b>Vanderbilt University Medical Center, Department of Medicine</b><br>
-                    Research Fellow, Feb. 2024 - Present
+                    <b>Department of Medicine, Vanderbilt University Medical Center</b><br>
+                    Research Fellow, Feb. 2024 - Present<br>
+                    Advisor: <a href="https://www.powersbrissovaresearch.org/">Dr. Marcela Brissova</a>
                 </p>
                 <b>Research Interest</b>
                 <ul>
