corrected email and address

--- a/blog_cn.html
+++ b/blog_cn.html
@@ -74,17 +74,22 @@
 			<div>
 				<ul>
 					<li>
-						<a href="blog/genomickb.html">
+						<a href="blog/fingerprint_cn.html">
+							用多模态成像探索胰岛的结构与功能
+						</a> [2025-Jun-18]
+					</li>
+                    <li>
+						<a href="blog/genomickb_cn.html">
 							GenomicKB: 人类基因组学的知识图谱
 						</a> [2023-Apr-6]
 					</li>
 					<li>
-						<a href="blog/caesar.html">
+						<a href="blog/caesar_cn.html">
 							CAESAR: 通过表观遗传学准确预测三维基因组
 						</a> [2022-Apr-30]
 					</li>
 					<li>
-						<a href="blog/schictools.html">
+						<a href="blog/schictools_cn.html">
 							scHiCTools: 单细胞Hi-C数据的分析工具
 						</a> [2021-May-20]
 					</li>
@@ -98,6 +103,11 @@
 			<div>
 				<ul>
 					<li>
+						<a href="https://www.bilibili.com/video/BV1v2oQYQEMJ/">
+							在加勒比海圣马丁岛看飞机
+						</a> [2025-Mar-28]
+					</li>
+                    <li>
 						<a href="https://www.bilibili.com/video/BV1jA411r73Y/">
 							不来梅观赛记录
 						</a> [2023-Jan-28]
@@ -125,10 +135,10 @@
 				<h3 class="widget-title">联系我</h3>
 				<div class="widget-body">
 					<p>邮箱:<br>
-						<a href="mailto:#">fanfeng@umich.edu</a><br>
+						<a href="mailto:#">fan.feng@vumc.org</a><br>
 						<br>
 						地址:<br>
-						Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
+						2215 Garland Ave., Nashville, Tennessee, 37232
 					</p>
 				</div>
 			</div>
