--- a/cv_english.html
+++ b/cv_english.html
@@ -216,10 +216,10 @@
                 </h3>
                 <div class="widget-body">
                     <p>E-mail:<br>
-                        <a href="mailto:#">fanfeng@umich.edu</a><br>
+                        <a href="mailto:#">fan.feng@vumc.org</a><br>
                         <br>
                         Address:<br>
-                        Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
+                        2215 Garland Ave., Nashville, Tennessee, 37232
                         <br>
                     </p>
                 </div>
