--- a/about.html
+++ b/about.html
@@ -176,12 +176,11 @@
 					联系我
 				</h3>
 				<div class="widget-body">
-					<p>E-mail 邮箱:<br>
-						<a href="mailto:#">fanfeng@umich.edu</a><br>
+					<p>E-mail:<br>
+						<a href="mailto:#">fan.feng@vumc.org</a><br>
 						<br>
-						Address 地址:<br>
-						Palmer Commons 2035, 100 Washtenaw Ave., Ann Arbor, MI 48109
-						<br>
+						Address:<br>
+						2215 Garland Ave., Nashville, Tennessee, 37232
 					</p>
 				</div>
 			</div>
