--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				</div>
 				
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="https://www.bilibili.com/video/BV19M411W75A/">
+					<a class="thumbnail" href="blog.html">
 						<span class="img">
 							<img src="assets/images/blog_picture/202301_Rome.jpg" alt="">
 							<span class="cover"><span class="more">Travel &rarr;</span></span>
