--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -189,7 +189,7 @@
                 </ul>
 
                 <a id="award"></a>
-                <h3>Awards</h3>
+                <h3>获奖情况</h3>
                 <ul>
                     <li>Data Resource Trainee Scholar Award, Integrated Islet Distribution Program (IIDP), 2025</li>
                     <li>AI Workshop Young Scholar Travel Award, National Institute of Diabetes and Digestive and Kidney Disease (NIDDK), 2024</li>
