--- a/cv_chinese.html
+++ b/cv_chinese.html
@@ -99,8 +99,7 @@
                 </p>
                 <b>研究兴趣</b>
                 <ul>
-                    <li>利用统计学和机器学习模型来理解胰岛生物学和糖尿病机制</li>
-                    <li>探索视觉-语言模型在生物医学数据中的应用，特别是在胰岛生物学和糖尿病研究中的潜力</li>
+                    <li>利用计算模型来理解胰岛生物学和糖尿病机制</li>
                     <li>基于知识图谱开发数据整合工具，以联合分析人类的基因组、表观基因组、转录组和四维基因组数据</li>
                     <li>染色质三维结构模式分析</li>
                 </ul>
@@ -161,7 +160,6 @@
                 <a id="invitedtalks"></a>
                 <h3>学术报告</h3>
                 <ul>
-                    <li>"Defining human pancreatic cell composition and spatial distribution with machine learning methods", AI in Precision Medicine of Diabetes and Other Chronic Diseases Workshop, 美国 罗克韦尔, 2024/10</li>
                     <li>"Application of knowledge graphs in biomedical fields", CCHC Omics Seminar, 美国 纳什维尔, 2024/10</li>
                     <li>"GenomicKB: a knowledge graph for human genome", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, 法国 里昂, 2023/7</li>
                     <li>"A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome", <i>Great Lakes Bioinformatics (GLBIO) conference</i>, 加拿大 蒙特利尔, 2023/5</li>
