--- a/cv_english.html
+++ b/cv_english.html
@@ -99,8 +99,7 @@
                 </p>
                 <b>Research Interest</b>
                 <ul>
-                    <li>Using <b>statistical</b> and <b>machine learning</b> models to understand islet biology and diabetes</li>
-                    <li>Explore the application of <b>vision-language models</b> in biomedical data, espectially in the context of islet biology and diabetes</li>
+                    <li>Using <b>computational</b> models to understand islet biology and diabetes</li>
                     <li>Develop data integration tools based on <b>knowledge graphs</b> to jointly analyze human genomic/epigenomic/transcriptome/4D genome data</li>
                     <li>Chromatin 3D structural pattern analysis</li>
                 </ul>
@@ -161,7 +160,6 @@
                 <a id="invitedtalks"></a>
                 <h3>Invited Talks</h3>
                 <ul>
-                    <li>"Defining human pancreatic cell composition and spatial distribution with machine learning methods", AI in Precision Medicine of Diabetes and Other Chronic Diseases Workshop, Rockville, USA, October 2024</li>
                     <li>"Application of knowledge graphs in biomedical fields", CCHC Omics Seminar, Nashville, USA, October 2024</li>
                     <li>"GenomicKB: a knowledge graph for human genome", <i>Intellectual Systems of Molecular Biology (ISMB)</i>, Lyon, France, July 2023</li>
                     <li>"A generalizable framework to comprehensively predict epigenome, chromatin organization, and transcriptome", <i>Great Lakes Bioinformatics (GLBIO) conference</i>, Montreal, Canada, May 2023</li>
